syntax = "proto3";

package board;

import '../common.proto';

message C2S_GameStartRequest {
    string sessionId = 1;
}

message S2C_GameStartNotification {
    bool success = 1;
    repeated PlayerData players = 2;
	GlobalFailCode failCode = 3;
    
    message PlayerData {
        string sessionId = 1;
        string nickname = 2;
        int32 position = 3;
    }
}

message C2S_RollDiceRequest {
}

message S2C_RollDiceResponse {
  	bool success = 1;
	int32 diceResult = 2;
	GlobalFailCode failCode = 3;
}

message S2C_RollDiceNotification {
	string sessionId = 1;
	int32 diceResult = 2;
}

message C2S_MovePlayerBoardRequest {
	string sessionId = 1;
	Vector targetPoint = 2;
}

message  S2C_MovePlayerBoardResponse {
  	bool success = 1;
	GlobalFailCode failCode = 2;
}

message  S2C_MovePlayerBoardNotification {
	string sessionId = 1;
	Vector targetPoint = 2;
}

message  C2S_PurchaseTileRequest {
	string sessionId = 1;
	int32 tile = 2;
}

message  S2C_PurchaseTileResponse {
  	bool success = 1;
	int32 tile = 2;
	GlobalFailCode failCode = 3;
}

message  S2C_PurchaseTileNotification {
	string sessionId = 1;
	int32 tile = 2;
}

message S2C_GameEndNotification {
  	repeated Rank rank = 1;
}

message C2S_BackToTheRoomRequest {
	string sessionId = 1;
}

message S2C_BackToTheRoomResponse {
	bool success = 1;
	RoomData room = 2;
	GlobalFailCode failCode = 3;
}

message S2C_BackToTheRoomNotification {
	string sessionId = 1;
}

message C2S_StartMiniGameRequest {
    string sessionId = 1;
}

message S2C_StartMiniGameNotification {
	int32 gameType = 1; // 랜덤으로 돌린 미니 게임 중 하나
}