syntax = "proto3";

package gate;

message GatePacket {
    repeated string sessionIds = 1;
    bytes gamePacket = 2; 
}